refactor: Enhance code quality and maintainability
- Added private constructors to utility classes to prevent instantiation.
- Improved type safety in the DefaultSecurityFilterChainBuilder by removing unnecessary parameters.
- Updated error handling in TemplateRsaPublicAndPrivateKey for better clarity.
- Refactored JSON processing methods in JsonService to throw more specific exceptions.
- Enhanced the TokenBean class with proper JSON property annotations for better serialization.
- Cleaned up application properties with additional comments for clarity.
- Improved test cases for JsonService and Digests to ensure accuracy and maintainability.